[tool.poetry]
name = "sother"
version = "0.2.1"
description = ""
authors = ["xfu <angerpeanut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
loguru = "^0.7.0"
click = "^8.1.6"
slither-analyzer = { git = "https://github.com/0xxfu/slither-certik", branch = "certik" }
#slither-analyzer = { git = "https://github.com/CertiKProject/slither-certik.git", branch = "certik" }
#slitherin = { git = "https://github.com/0xxfu/slitherin.git", branch = "master" }
falcon-analyzer = { git = "https://github.com/0xxfu/falcon-metatrust.git", branch = "main" }

[tool.poetry.scripts]
sother = "sother.main:start"
sother-cli = "sother.main:cli"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"
solc-select = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
